Removed Z-index in an attempt to fix mobile scrolling weirdness

--- a/dev/responsive.scss
+++ b/dev/responsive.scss
@@ -31,7 +31,6 @@
   div.design-container {
     display: block;
     position: relative;
-    z-index: 0;
     width: 100%;
     height: 90vh;
 
@@ -104,7 +103,6 @@
   div.development-container {
     display: block;
     position: relative;
-    z-index: 0;
     width: calc(100% - 40px);
     height: 65vh;
 
